--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Prayer Timming </title>
-    <link rel="stylesheet" href="mobile.cFss">
+    <link rel="stylesheet" href="mobile.css">
     <link rel="stylesheet" href="style.css">
 
 </head>
