--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     </form>
 
-    <div id="info">
+    <div id="info" class="main">
         <!-- <div id="city"></div>
         <div id="country"></div> -->
         <div id="T-Zone"></div>
